# obs-MultichannelAudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  avermedia_deps.cmake  buildspec.json  obs_qt_deps.cmake
.github/: setup_qt_env.bat
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project-win.yaml  push.yaml
avt_device_opener/: avt_device_opener.cmake
avt_device_opener/include/: AVerMediaDeviceOpener.h  AVerMediaExports.h  AVerMediaVendorSdkLoader.h
avt_device_opener/lib/: avt_device_opener.lib
avt_dshow_core/: LogHelper.h  avt_dshow_core.cmake
avt_dshow_core/include/: AVerMediaAudioDevice.h  AvtDShowAudioSampleStruct.h
avt_dshow_core/lib/: avt_dshow_core.lib
cmake/: FFmpeg.cmake
cmake/common/: bootstrap.cmake
cmake/macos/resources/: create-package.cmake.in  distribution.in
cmake/windows/: helpers.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini
i18n/: cs_CZ.isl  de_DE.isl  en_US.isl  es_ES.isl  fr_FR.isl  it_IT.isl  ja_JP.isl  ko_KR.isl  nl_NL.isl  pl_PL.isl  pt_BR.isl  ru_RU.isl  template.isl  th_TH.isl  zh_CN.isl  zh_TW.isl
i18n/en.lproj/: LICENSE.txt
i18n/zh-Hant.lproj/: LICENSE.txt
src/: FfmpegAudioDecode.cpp  FfmpegAudioDecode.hpp  plugin-main.c  plugin-support.c.in
src/Mac/: AVerMediaCoreAudioSource.cpp  AVerMediaCoreAudioSource.h  audio-device-enum.cpp  audio-device-enum.h  avt-mac-coreaudio-input.cpp
src/Win/: AVerMediaAudioDShowInput.cpp  AVerMediaAudioDShowInput.h  avt-win-audio-dshow-input.cpp  encode-dstr.hpp
